--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     possimus libero delectus modi mollitia. Voluptatem.Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Id nisi odio recusandae ea omnis aliquid culpa adipisci autem, laboriosam harum
                     praesentium exercitationem voluptate dolor, aliquam quo sequi quis dolorum ab.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, doloremque veniam, commodi dolores quidem numquam ipsum ratione possimus animi aspernatur, illo cum qui magnam aut esse ducimus? Nostrum, aspernatur vitae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quo, placeat, labore vel nobis voluptas impedit nesciunt repellat accusantium odit hic perspiciatis! Expedita eligendi inventore obcaecati unde eveniet. Nemo, quis.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, doloremque veniam, commodi dolores quidem numquam ipsum ratione possimus animi aspernatur, illo cum qui magnam aut esse ducimus? Nostrum, aspernatur vitae! Lorem ipsum dolor sit amet consectetur adipisicing elit.
 
                 </p>
 
